--- a/4/css/style.css
+++ b/4/css/style.css
@@ -72,19 +72,18 @@ body {
 
 .container {
   width: 100%;
-  margin: 0 30px;
-  padding: 0;
+  padding: 0 30px;
 }
 @media (min-width: 768px) {
   .container {
-    margin: 0 50px;
+    padding: 0 50px;
   }
 }
 
 .categories {
   position: relative;
   width: 100%;
-  background-color: #f2f2f2;
+  background-color: #f9f9f9;
 }
 @media (min-width: 768px) {
   .categories {
@@ -93,11 +92,11 @@ body {
 }
 
 .categories__container {
-  background-color: #ffffff;
+  background-color: #f9f9f9;
   background-image: url("../img/index-categories-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100%;
+  background-size: 320px 373px;
 }
 @media (min-width: 768px) {
   .categories__container {
@@ -105,14 +104,16 @@ body {
     padding-bottom: 135px;
     background-image: url("../img/hero-tablet.jpg");
     background-position: 50% -60px;
+    background-size: 768px 746px;
   }
 }
 @media (min-width: 1150px) {
   .categories__container {
     padding-top: 94px;
     padding-bottom: 135px;
-    background-image: url("../../img/hero-desktop.jpg");
+    background-image: url("../img/hero-desktop.jpg");
     background-position: 50% -60px;
+    background-size: 1150px 746px;
   }
 }
 
@@ -139,7 +140,7 @@ body {
 }
 
 .categories__list {
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 31px;
   padding: 0;
   list-style: none;
@@ -147,6 +148,11 @@ body {
 @media (min-width: 768px) {
   .categories__list {
     display: flex;
+  }
+}
+@media (min-width: 1150px) {
+  .categories__list {
+    max-width: 1050px;
   }
 }
 
@@ -158,7 +164,7 @@ body {
 
 .categories__link {
   display: block;
-  min-width: 320px;
+  max-width: 320px;
   height: 103px;
   padding: 24px 160px 31px 30px;
   font-style: normal;
@@ -186,6 +192,8 @@ body {
 @media (min-width: 1150px) {
   .contacts {
     position: relative;
+    max-width: 1150px;
+    margin: 0 auto;
     margin-bottom: 105px;
   }
 }
@@ -283,17 +291,32 @@ body {
 @media (min-width: 768px) {
   .contacts__wrapper {
     display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
   }
 }
 @media (min-width: 1150px) {
   .contacts__wrapper {
     flex-direction: column;
+    max-width: 300px;
   }
 }
 
+@media (min-width: 321px) {
+  .contacts__inner {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 768px) {
+  .contacts__inner {
+    max-width: 990px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 1150px) {
   .contacts__inner {
-    margin-left: 20%;
+    padding: 0 50px 0 175px;
   }
 }
 
@@ -322,9 +345,18 @@ body {
   padding: 0;
   list-style: none;
 }
+@media (min-width: 321px) {
+  .features__list {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 768px) {
   .features__list {
     display: grid;
+    max-width: 700px;
+    margin: 0 auto;
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -366,8 +398,8 @@ body {
 
 @media (min-width: 1150px) {
   .featutes__container {
-    width: 60%;
-    margin-left: 30%;
+    max-width: 700px;
+    margin: 0 auto;
   }
 }
 
@@ -385,7 +417,7 @@ body {
 
 .header__site-link {
   display: block;
-  padding: 29px;
+  padding: 29px 65px 27px 76px;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -396,6 +428,8 @@ body {
 }
 @media (min-width: 768px) {
   .header__site-link {
+    padding-right: 0;
+    padding-left: 0;
     font-size: 15px;
   }
 }
@@ -502,7 +536,12 @@ body {
 }
 @media (min-width: 768px) {
   .header__nav {
-    padding-top: 0;
+    padding: 0 50px;
+  }
+}
+@media (min-width: 1150px) {
+  .header__nav {
+    padding: 0 50px;
   }
 }
 
@@ -554,6 +593,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     padding: 0;
+    column-gap: 36px;
   }
   .header__site-nav::before {
     content: "";
@@ -645,7 +685,7 @@ body {
 .header__toggle-button {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: 50px;
 }
 @media (min-width: 768px) {
   .header__toggle-button {
@@ -659,14 +699,23 @@ body {
   background-color: #f1f1f1;
 }
 
+.page-footer__inner {
+  max-width: 320px;
+  margin: 0 auto;
+}
 @media (min-width: 768px) {
   .page-footer__inner {
+    max-width: 768px;
     display: grid;
     align-items: center;
-    margin: 51px 50px 58px 50px;
     margin-top: auto;
-    padding: 50px 0;
+    padding: 50px 50px;
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1150px) {
+  .page-footer__inner {
+    max-width: 1050px;
   }
 }
 
@@ -748,6 +797,7 @@ body {
 }
 @media (min-width: 768px) {
   .rewiews__comment {
+    max-width: 668px;
     font-size: 17px;
     grid-column-end: 4;
     grid-column-start: 1;
@@ -784,6 +834,7 @@ body {
 
 .rewiews__toggles {
   display: flex;
+  min-width: 260px;
   max-width: 260px;
   margin: 0 0 38px 0;
 }
@@ -810,26 +861,38 @@ body {
 }
 @media (min-width: 768px) {
   .rewiews__button {
-    order: 2;
+    max-width: 175px;
     font-size: 17px;
   }
 }
 
 @media (min-width: 768px) {
   .rewiews {
+    max-width: 900px;
+    margin: 0 auto;
     background-image: url("../../img/review.jpg");
     background-repeat: no-repeat;
   }
 }
 @media (min-width: 1150px) {
   .rewiews {
-    margin-left: 50px;
+    max-width: 1050px;
+    padding: 0 50px 0 175px;
   }
 }
 
+@media (min-width: 321px) {
+  .rewiews__wrapper {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 768px) {
   .rewiews__wrapper {
     display: grid;
+    max-width: 900px;
+    margin: 0 auto;
+    column-gap: 313px;
     grid-auto-rows: minmax(100px, auto);
     grid-template-areas: "rt rb" "rc rc" "ri rtg";
     grid-template-columns: repeat(2, 1fr);
@@ -837,7 +900,8 @@ body {
 }
 @media (min-width: 1150px) {
   .rewiews__wrapper {
-    margin-left: 25%;
+    max-width: 900px;
+    margin: 0 auto;
   }
 }
 
@@ -862,14 +926,22 @@ body {
 }
 
 .stock {
-  margin: 0 30px;
+  margin: 0 auto;
+  padding: 0 30px;
   background-color: #ffffff;
 }
 @media (min-width: 768px) {
   .stock {
     position: relative;
-    max-width: 100%;
-    margin: 0 50px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 50px;
+  }
+}
+@media (min-width: 768px) {
+  .stock {
+    max-width: 1050px;
+    padding: 0 50px;
   }
 }
 
@@ -956,11 +1028,18 @@ body {
 .stock__image {
   margin-bottom: 25px;
 }
+@media (min-width: 321px) {
+  .stock__image {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 768px) {
   .stock__image {
     position: absolute;
     top: 50px;
-    left: 60%;
+    right: 50px;
   }
 }
 
@@ -997,18 +1076,32 @@ body {
   }
 }
 
+@media (min-width: 321px) {
+  .stock__container--table {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 768px) {
   .stock__container--table {
     width: 50%;
+    margin: 0;
   }
 }
 @media (min-width: 1150px) {
   .stock__container--table {
-    width: 25%;
-    margin-left: 30%;
+    max-width: 300px;
+    margin-left: 175px;
   }
 }
 
+@media (min-width: 321px) {
+  .stock__container-price {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 768px) {
   .stock__container-price {
     width: 50%;
@@ -1016,8 +1109,8 @@ body {
 }
 @media (min-width: 1150px) {
   .stock__container-price {
-    width: 25%;
-    margin-left: 30%;
+    max-width: 300px;
+    margin-left: 175px;
   }
 }
 
@@ -1038,10 +1131,21 @@ body {
 .modal {
   position: fixed;
   top: 50%;
-  padding-top: 29px;
+  left: 50%;
+  min-width: 320px;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 30px;
   background-color: #ffffff;
   border: 1px solid #c6c6c6;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  transform: translate(-50%, -50%);
+}
+@media (min-width: 768px) {
+  .modal {
+    max-width: 566px;
+    padding: 108px;
+  }
 }
 
 .modal__close {
@@ -1049,13 +1153,18 @@ body {
 }
 
 .modal__title {
+  text-align: center;
   margin: 0 0 14px 0;
-  padding: 0 50px 0 54px;
   font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
   text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .modal__title {
+    padding: 0;
+  }
 }
 
 .modal__form-group {
@@ -1077,11 +1186,18 @@ body {
 }
 
 .modal__submit {
+  width: 100%;
+  margin: 0 auto;
   margin-bottom: 46px;
   color: #ffffff;
   background-color: #63d1bb;
   border: none;
   outline: none;
+}
+@media (min-width: 768px) {
+  .modal__submit {
+    max-width: 350px;
+  }
 }
 
 .intro {
@@ -1089,17 +1205,31 @@ body {
   background-color: #f1f1f1;
 }
 
+.intro__wrapper {
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 74px 0;
+}
+@media (min-width: 768px) {
+  .intro__wrapper {
+    max-width: 768px;
+    margin-bottom: 54px;
+  }
+}
+@media (min-width: 1150px) {
+  .intro__wrapper {
+    max-width: 1150px;
+    margin-bottom: 98px;
+  }
+}
+
 .intro__tittle {
-  display: block;
-  height: 177px;
-  margin: 0;
-  padding: 74px 21px;
   font-style: normal;
   font-weight: 700;
   font-size: 27px;
   line-height: 30px;
   text-align: center;
-  background-color: #f9f9f9;
 }
 @media (min-width: 768px) {
   .intro__tittle {
@@ -1125,36 +1255,30 @@ body {
   font-size: 13px;
   line-height: 24px;
   color: #444444;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  padding: 0 30px;
+}
+@media (min-width: 321px) {
+  .knitting__description {
+    max-width: 500px;
+    padding: 0 30px;
+    margin-bottom: 80px;
+  }
 }
 @media (min-width: 768px) {
   .knitting__description {
     font-size: 17px;
     line-height: 30px;
-  }
-}
-
-.kniting__form-wrapper {
-  margin: 0 30px;
-  padding: 0;
-}
-@media (min-width: 768px) {
-  .kniting__form-wrapper {
-    margin: 0 50px;
-  }
-}
-
-.knitting__description {
-  margin: 0 30px;
-  padding: 0;
-}
-@media (min-width: 768px) {
-  .knitting__description {
-    padding: 54px 50px 70px 50px;
+    max-width: 668px;
+    padding: 0 50px;
   }
 }
 @media (min-width: 1150px) {
   .knitting__description {
-    padding: 98px 223px 70px 225px;
+    max-width: 735px;
+    padding: 0 15px;
+    margin-bottom: 80px;
   }
 }
 
@@ -1165,61 +1289,34 @@ body {
 }
 
 .form-group {
+  margin: 0;
+  padding: 0;
   border: none;
 }
-
 @media (min-width: 768px) {
-  .form-group--grey::before {
-    content: "";
-    position: absolute;
-    top: 80px;
-    left: -100vw;
-    z-index: -1;
-    width: 200vw;
-    height: 20%;
-    background-color: #f9f9f9;
-  }
-}
-@media (min-width: 1150px) {
-  .form-group--grey::before {
-    content: "";
-    position: absolute;
-    top: 80px;
-    left: -100vw;
-    z-index: -1;
-    width: 200vw;
-    height: 13%;
-    background-color: #f9f9f9;
-  }
-}
-
-@media (min-width: 768px) {
-  .form-group--contacts {
+  .form-group {
     margin-bottom: 100px;
-  }
-  .form-group--contacts::before {
-    content: "";
-    position: absolute;
-    bottom: 295px;
-    left: -100vw;
-    z-index: -1;
-    width: 200vw;
-    height: 20%;
-    background-color: #f9f9f9;
   }
 }
 
 .form-group__title {
-  width: 170px;
+  width: 90px;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
   color: #63d1bb;
+  text-transform: uppercase;
 }
 @media (min-width: 768px) {
   .form-group__title {
     float: left;
+    margin-right: 80px;
+  }
+}
+@media (min-width: 1150px) {
+  .form-group__title {
+    margin-right: 50px;
   }
 }
 
@@ -1232,8 +1329,37 @@ body {
 }
 @media (min-width: 768px) {
   .form-group__label {
+    margin: 0;
+    padding: 0;
     font-size: 19px;
     line-height: 18px;
+  }
+}
+.form-group__label--checkbox {
+  padding-left: 48px;
+}
+@media (min-width: 768px) {
+  .form-group__label--checkbox {
+    padding-left: 144px;
+  }
+}
+@media (min-width: 1150px) {
+  .form-group__label--checkbox {
+    padding-left: 70px;
+  }
+}
+.form-group__label--radio {
+  display: flex;
+  padding: 14px 20px 10px 48px;
+}
+@media (min-width: 768px) {
+  .form-group__label--radio {
+    padding-left: 144px;
+  }
+}
+@media (min-width: 1150px) {
+  .form-group__label--radio {
+    padding-left: 70px;
   }
 }
 
@@ -1242,6 +1368,11 @@ body {
   padding: 0;
   list-style: none;
 }
+@media (min-width: 768px) {
+  .form__list {
+    display: grid;
+  }
+}
 
 @media (min-width: 768px) {
   .form__list--has-wrapper {
@@ -1249,13 +1380,14 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 1150px) {
   .form__list--has-wrapper {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 .form-group__input {
+  margin: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -1295,13 +1427,10 @@ body {
 .form-group__title--additionally {
   margin-bottom: 23px;
 }
-@media (min-width: 768px) {
-  .form-group__title--additionally {
-    width: 218px;
-  }
-}
 
 .form-group__textarea {
+  min-width: 260px;
+  max-width: 260px;
   margin-bottom: 17px;
   padding: 15px 15px 26px;
   font-style: normal;
@@ -1313,8 +1442,14 @@ body {
 }
 @media (min-width: 768px) {
   .form-group__textarea {
+    max-width: 501px;
     font-size: 18px;
     line-height: 19px;
+  }
+}
+@media (min-width: 1150px) {
+  .form-group__textarea {
+    max-width: 700px;
   }
 }
 
@@ -1322,6 +1457,7 @@ body {
   width: 100%;
   padding: 15px 0;
   border-bottom: 2px solid #000000;
+  opacity: 0.3;
 }
 @media (min-width: 768px) {
   .form-group__input--about {
@@ -1336,19 +1472,27 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  color: #444444;
 }
 @media (min-width: 768px) {
   .form__mark {
     order: 2;
+    font-size: 17px;
+    line-height: 30px;
   }
 }
 
-.form__submit {
+.form__submit-button {
   margin-bottom: 55px;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
+}
+@media (min-width: 768px) {
+  .form__submit-button {
+    max-width: 230px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1357,11 +1501,35 @@ body {
   }
 }
 
+.form__item--about {
+  margin-bottom: 22px;
+}
 @media (min-width: 768px) {
   .form__item--about {
     display: flex;
     align-items: center;
+    max-width: 501px;
     margin-bottom: 41px;
+  }
+}
+@media (min-width: 1150px) {
+  .form__item--about {
+    max-width: 700px;
+  }
+}
+
+.form__item--checkbox,
+.form__item--about {
+  margin-bottom: 23px;
+}
+@media (min-width: 768px) {
+  .form__item--checkbox,
+.form__item--about {
+    margin-bottom: 60px;
+  }
+  .form__item--checkbox:last-child,
+.form__item--about:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -1371,25 +1539,56 @@ body {
   }
 }
 
+.form-group__input--contacts {
+  width: 100%;
+  padding: 15px 0;
+  border-bottom: 2px solid #000000;
+  opacity: 0.3;
+}
 @media (min-width: 768px) {
   .form-group__input--contacts {
-    width: 100%;
-    padding: 15px 0;
-    background-color: #f9f9f9;
-    border-bottom: 2px solid #000000;
+    max-width: 501px;
+    background-color: #f1f1f1;
+  }
+}
+@media (min-width: 768px) {
+  .form-group__input--contacts {
+    max-width: 700px;
   }
 }
 
 @media (min-width: 768px) {
+  .form-group--grey {
+    padding-top: 65px;
+  }
+}
+@media (min-width: 1150px) {
+  .form-group--grey {
+    padding-top: 50px;
+  }
+}
+
+.form-group__container {
+  margin-bottom: 22px;
+}
+@media (min-width: 768px) {
   .form-group__container {
     display: grid;
+    align-items: center;
+    margin-bottom: 0;
+    padding: 60px 0 24px;
     grid-template-columns: auto 1fr;
+  }
+  .form-group__container:last-child {
+    padding-top: 0;
+    padding-bottom: 50px;
   }
 }
 
 @media (min-width: 768px) {
   .form-group--more {
     display: flex;
+    margin-bottom: 53px;
   }
 }
 
@@ -1400,46 +1599,109 @@ body {
   }
 }
 
+.form__submit {
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+@media (min-width: 768px) {
+  .form__submit {
+    display: flex;
+    align-items: baseline;
+    max-width: 768px;
+    padding: 0 50px;
+    column-gap: 110px;
+  }
+}
+@media (min-width: 1150px) {
+  .form__submit {
+    display: flex;
+    align-items: baseline;
+    max-width: 710px;
+    padding: 0 5px;
+  }
+}
+
+.form__container {
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+@media (min-width: 321px) {
+  .form__container {
+    max-width: 320px;
+  }
+}
 @media (min-width: 768px) {
   .form__container {
-    display: flex;
-    justify-content: space-around;
+    max-width: 768px;
+    padding: 0 50px;
+  }
+}
+@media (min-width: 1150px) {
+  .form__container {
+    max-width: 1150px;
+    padding: 0 97px;
+  }
+}
+
+@media (min-width: 768px) {
+  .form__container--color {
+    background-color: #f1f1f1;
   }
 }
 
 .catalog__list {
-  margin: 0;
+  margin: 0 auto;
   padding: 0 30px;
   list-style: none;
 }
 @media (min-width: 768px) {
   .catalog__list {
-    padding: 67px 50px 53px;
+    padding: 67px 50px 0 50px;
   }
 }
 @media (min-width: 1150px) {
   .catalog__list {
     display: grid;
+    max-width: 1150px;
+    padding: 0 50px;
     gap: 50px;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-@media (min-width: 768px) {
-  .catalog__item {
-    display: flex;
-  }
+.catalog__item {
+  min-width: 260px;
+  max-width: 260px;
+  margin: 0 auto;
 }
 @media (min-width: 768px) {
   .catalog__item {
+    display: grid;
+    max-width: 668px;
+    margin-bottom: 54px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1150px) {
+  .catalog__item {
     display: flex;
     flex-direction: column;
+    max-width: 1051px;
   }
 }
 
 .catalog-item__link-image {
   display: block;
   width: 100%;
+  height: auto;
+}
+@media (min-width: 768px) {
+  .catalog-item__link-image {
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .catalog__item-wrapper {
@@ -1451,6 +1713,7 @@ body {
   .catalog__item-wrapper {
     width: 100%;
     min-width: 334px;
+    margin-bottom: 0;
   }
 }
 @media (min-width: 1150px) {
@@ -1472,6 +1735,9 @@ body {
 @media (min-width: 1150px) {
   .catalog-item__info {
     padding-bottom: 37px;
+  }
+  .catalog-item__info--big {
+    padding-bottom: 12px;
   }
 }
 
@@ -1530,23 +1796,38 @@ body {
 .manufacturing {
   padding: 0 30px;
 }
+@media (min-width: 768px) {
+  .manufacturing {
+    font-size: 50px;
+  }
+}
+@media (min-width: 1150px) {
+  .manufacturing {
+    font-size: 50px;
+  }
+}
 
 .manufacturing__inner {
   position: relative;
+  min-width: 260px;
+  max-width: 260px;
+  margin: 0 auto;
   border: 1px solid #ececec;
 }
 @media (min-width: 768px) {
   .manufacturing__inner {
     display: grid;
+    max-width: 668px;
     grid-template-areas: "player-container" "tittle" "manufacturing__order";
   }
 }
 @media (min-width: 1150px) {
   .manufacturing__inner {
     display: grid;
+    max-width: 1050px;
     padding-bottom: 105px;
     grid-template-areas: "player-container tittle" "player-container manufacturing__order";
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 65% 1fr;
   }
 }
 
@@ -1582,7 +1863,18 @@ body {
 }
 
 .manufacturing__order {
-  padding: 13px 30px 32px;
+  padding: 13px 30px 34px;
+  grid-area: manufacturing__order;
+}
+@media (min-width: 768px) {
+  .manufacturing__order {
+    padding: 0 42px 46px 42px;
+  }
+}
+@media (min-width: 1150px) {
+  .manufacturing__order {
+    padding: 47px 36px 60px 80px;
+  }
 }
 
 .manufacturing__button {
@@ -1594,16 +1886,18 @@ body {
 }
 @media (min-width: 768px) {
   .manufacturing__button {
+    max-width: 584px;
     font-size: 17px;
+  }
+}
+@media (min-width: 1150px) {
+  .manufacturing__button {
+    max-width: 230px;
   }
 }
 
 .manufacturing__player-container {
   grid-area: player-container;
-}
-
-.manufacturing__order {
-  grid-area: manufacturing__order;
 }
 
 .manufacturing__player-button {
@@ -1614,7 +1908,8 @@ body {
 }
 @media (min-width: 1150px) {
   .manufacturing__player-button {
-    left: 25%;
+    top: 205px;
+    left: 33%;
   }
 }
 
