--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -46,6 +46,19 @@
   }
 }
 
+.catalog__item-image {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+
+  object-fit: contain;
+
+  @media (min-width: $vp-768) {
+    width: auto;
+    max-width: none;
+  }
+}
 
 .catalog-item__link-image {
   display: block;
@@ -85,6 +98,10 @@
 
   @media (min-width: $vp-768) {
     padding-bottom: 170px;
+
+    &--big {
+      padding-bottom: 140px;
+    }
   }
 
   @media (min-width: $vp-1150) {
@@ -100,7 +117,7 @@
   position: relative;
 
   padding-top: 22px;
-  padding-bottom: 32px;
+  padding-bottom: 25px;
 }
 
 .catalog-item__link {
